fix: update header spacing

--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ a {
 .header {
     display: flex;
     flex-direction: column;
-    margin-bottom: 70px;
-    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-top: 130px;
     padding: 0 80px 0 60px;
 }
 
